# aptly

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  install-compose.sh  install-decompiler.sh  install-plugin.sh  install-tracer.sh  install.sh
.github/workflows/: release-plugins.yaml  release.yaml
cmd/: root.go  version.go
cmd/account/: account.go  balance.go  module.go  modules.go  resource.go  resources.go  sends.go  txs.go
cmd/address/: address.go
cmd/block/: block.go  by_version.go
cmd/events/: events.go
cmd/ledger/: ledger.go
cmd/node/: gas_price.go  health.go  info.go  ledger.go  node.go  spec.go
cmd/table/: table.go
cmd/tx/: balance_change.go  encode.go  graph.go  helpers.go  list.go  simulate.go  submit.go  trace.go  transfers.go  tx.go
cmd/view/: view.go
crates/aptly-analytics/: Cargo.toml
crates/aptly-aptos/: Cargo.toml
crates/aptly-aptos/src/: lib.rs
crates/aptly-cli/: Cargo.toml  build.rs
crates/aptly-cli/src/: main.rs  plugin_tools.rs
crates/aptly-cli/src/commands/: account.rs  address.rs  block.rs  common.rs  events.rs  mod.rs  node.rs  plugin.rs  table.rs  tx.rs  view.rs
crates/aptly-core/: Cargo.toml
crates/aptly-core/src/: lib.rs
crates/aptly-plugin/: Cargo.toml
crates/aptly-plugin/src/: lib.rs
crates/aptly-trace/: Cargo.toml
crates/aptly-trace-sentio/: Cargo.toml
crates/aptos-script-compose/: Cargo.toml
crates/aptos-script-compose/src/: main.rs
docs/: API_COVERAGE.md  agent-discoverability.md  rust-migration-plan.md
pkg/api/: api.go
