[package]
name = "aptly-aptos"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Aptos-specific package repository integrations for aptly-cli"
repository = "https://github.com/0xbe1/aptly"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
